feat/implement-notifications-controller-on-backend
